board-api/board-api-deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: board-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-api-deployment  # Deployment Name
  namespace: board-api        # Namespace Mapping
  labels:
    app: board-api            # Label
spec:
  replicas: 3                 # Amount of Replicaset
  selector:
    matchLabels:
      app: board-api
  template:
    metadata:
      labels:
        app: board-api
    spec:
      # Define Container Infomations
      containers:
        - name: board-api
          image: docker.io/hotoron/demo-api:v4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
