board-api/board-api-headless-svc.yml
# headless서비스라 엔드포인트가 노출X
# 포트포워딩, 노드포트로 노출해줘야함
---
apiVersion: v1
kind: Service
metadata:
  name: board-api-headless-svc    # Headless Service Name
  namespace: board-api            # Namespace Mapping
spec:
  selector:
    app: board-api                # Service Target Label
  type: ClusterIP
  clusterIP: None                 # Set None
  ports:
    - name: rest
      port: 8000                    # Inner container port
      targetPort: 8000              # Service forward port
      protocol: TCP                 # Protocol configuration
